# TridjayaElektronikSamrat

./: .env.example  .gitignore  API_test.md  API_test_raw.json  AUDIT_REPORT.md  DEPLOYMENT_READINESS_REPORT_2026_05_15.md  PRODUCTION_READINESS_REPORT.md  SCALABILITY_REPORT.md  SECURITY_AUDIT_REPORT_2026.md  SQLite_to_MySQL_Migration_Knowledge_Base.md  Security.md  TASK_11_VERIFICATION.md  TASK_13_IMPLEMENTATION_SUMMARY.md  TERMINAL_INSTRUCTIONS.md  TODO_LIST_CREDIT_FEATURE.md  TRIDJAYA_DEVELOPMENT_PLAN.md  VPS setup.md  VPS_INSTALLATION_GUIDE.md  WA_CAMPAIGN_PAUSE_ANALYSIS.md  WA_CAMPAIGN_PAUSE_FIX_SUMMARY.md  deploy.sh  docker-compose.yml  excel_analysis.json  handover_credit_integration.md  merge_seeds.cjs  report.md  report_future.md  seeds.json  setup.md  setupVPS.md
.ai-skills/: uiux_promax.md
backend/: .dockerignore  .env.example  .gitignore  Cargo.toml  Dockerfile  README.md  SPINTAX_IMPLEMENTATION.md  TASK_17_CHECKLIST.md  TASK_17_IMPLEMENTATION.md  TASK_19_IMPLEMENTATION.md  TASK_19_SUMMARY.md  TASK_20_IMPLEMENTATION.md  TASK_21_IMPLEMENTATION.md  TASK_22_IMPLEMENTATION.md  TASK_22_SUMMARY.md  TASK_23_1_SUMMARY.md  TASK_23_IMPLEMENTATION.md  WEBHOOK_API_IMPLEMENTATION.md  consolidate_categories.js  seeds.json  seeds.json.bak  seeds_base.json  test_bulk.js  tridjaya.db
backend/baileys-bridge/: .gitignore  IMPLEMENTATION.md  README.md  SESSION_MANAGEMENT.md  TASK_4_SUMMARY.md  package-lock.json  package.json  test-rpc.js  test-session.js
backend/baileys-bridge/examples/: simple-test.sh
backend/baileys-bridge/src/: index.js  session.js
backend/migrations/: 2026042301_init.sql  2026042302_agent_rewards.sql  2026042303_site_content.sql  2026042304_agent_leads.sql  2026042305_telemetry.sql  2026042306_referrals.sql  2026042501_add_registration_photos.sql  2026042502_add_reward_value.sql  2026042503_add_user_bank_account.sql  2026042504_add_user_last_login.sql  2026042601_add_support_tickets.sql  2026042602_add_partners.sql  2026042603_add_user_is_verified.sql  2026042701_add_notifications.sql  2026042702_security_tokens.sql  2026042801_product_categories.sql  2026042802_product_marketing_fields.sql  2026042901_add_job_applications.sql  2026050101_add_product_rating_review.sql  2026050102_add_product_ratings.sql  2026050201_create_wa_tables.sql  2026050202_add_wa_campaign_status.sql  2026050203_enhance_wa_tracking.sql  2026050301_add_sales_features.sql  2026050302_add_jabatan_to_users.sql  2026050401_pixel_core.sql  2026050402_pixel_events.sql  2026050403_pixel_analytics.sql  2026050501_wa_gateway_core.sql  2026050502_add_campaign_metrics.sql  2026050503_add_chatbot_response_time.sql  2026050504_add_wa_accounts_status_columns.sql  2026051101_wa_gateway_core.sql  2026051201_add_token_prefix.sql  2026051202_persist_sessions.sql  2026051203_wa_blast_contacts.sql  2026051401_landing_content.sql  2026051402_product_price_markups.sql  2026051403_add_product_stock_quantity.sql  2026051404_deduplicate_product_price_markups.sql  (+8 more)
backend/migrations_mysql/: 001_init_mysql.sql  002_karyawan_schema.sql  003_pic_raport_role_settings.sql  004_karyawan_prospek_raport_integration.sql  005_sync_prospek_harian_to_leads.sql  006_jobdesk_report_settings.sql  007_jobdesk_divisions_settings.sql  008_cabang_management.sql  009_disable_user_avatars.sql  010_hash_refresh_tokens.sql  011_encrypt_agent_registration_pii.sql  012_add_product_is_active.sql  013_raport_division_snapshot_unique.sql  014_admin_sales_role_and_target_category.sql  015_backfill_admin_sales_referrals.sql  017_drop_support_tickets.sql  017_karyawan_off_requests.sql  018_scale_indexes.sql
backend/scratch/: enrich_products.py
backend/scripts/: cleanup_images.py  convert_uploads_to_webp.py  enrich_products.py  fix_seed_images.py  generate_seeds.js  import_images.py  reset_catalog.ps1  reset_catalog.sh
backend/src/: api_routes.rs  api_tokens.rs  auth.rs  blast_engine.rs  bomber.rs  bridge_event_processor.rs  cache.rs  campaign_config.rs  campaign_metrics.rs  captcha.rs  chatbot_engine.rs  chatbot_routes.rs  cleanup.rs  fonnte.rs  landing_routes.rs  lib.rs  logging.rs  mail.rs  main.rs  media_handler.rs  metrics.rs  queue_manager.rs  redis_manager.rs  response.rs  routes.rs  seed.rs  session_manager.rs  spintax.rs  spintax_example.rs  state.rs  url_safety.rs  validation.rs  wa_dispatcher.rs  wa_event_dispatcher.rs  wa_session_routes.rs  wa_status_tracker.rs  wa_webhook_handlers.rs  wa_worker.rs  webhook_forwarder.rs
backend/src/bridge/: mod.rs
backend/src/pixel/: analytics_handlers.rs  analytics_job.rs  campaign_handlers.rs  crypto.rs  event_handlers.rs  handlers.rs  meta_capi.rs  mod.rs  models.rs
backend/src/wa_gateway/: mod.rs  models.rs  routes.rs
backend/src/wa_gateway/handlers/: contacts.rs  dashboard.rs  messages.rs  mod.rs  sessions.rs  templates.rs  webhooks.rs
backend/tests/: API_ROUTES_TEST_SUMMARY.md  api_routes_test.rs  api_tokens_test.rs  auth_role_owner.rs  campaign_config_property_test.rs  campaign_metrics_test.rs  chatbot_routes_test.rs  migration_bug_condition_test.rs  migration_preservation_test.rs  validation_test.rs  webhook_routes_test.rs
backend/tests/support/: mod.rs
desktop/wa_excel_import/: Cargo.toml  README.md
desktop/wa_excel_import/src/: lib.rs  main.rs
docs/: AKSES_ROLE_TESTING.md  BULK_IMPORT_GUIDE.md  PIXEL_TESTING_GUIDE_AGENT.md  PROMPT_GAMBAR_DEFAULT_KATEGORI.md  README.md  SESSION_DOCUMENTATION.md  WA_GATEWAY_SELF_HOSTED_ANALYSIS.md  admin_manual.md  api.md  architecture.md  backend.md  database.md  deployment.md  erd.md  frontend.md  frontend_execution.md  load-testing-kvm2.md  pixel.md  research.md  security.md  template_kontak_blast.csv  threat_model.md  ui_prompts_masterplan.md  wa-blast-plan.md
frontend/: .env  .env.example  Dockerfile  index.html  migrate-webp.cjs  nginx.conf  package-lock.json  package.json  read_format.cjs  tailwind.config.js  tmp-product-import-edge.csv  tmp-product-import-smoke.csv  vite.config.ts  vitest.config.ts
scratch/: analyze_excel.py  api_test.py  audit_db.py  check_json_keys.py  convert_to_webp.py  enrich_products.js  wipe_db.py  (+2 more)
(+242 files in other folders)
