[package]
name = "tridjaya-backend"
version = "0.1.0"
edition = "2021"
autobins = false

[features]
default = []
dev-tools = []

[[bin]]
name = "tridjaya-backend"
path = "src/main.rs"

[[bin]]
name = "list_tables"
path = "src/bin/list_tables.rs"
required-features = ["dev-tools"]

[[bin]]
name = "clear_catalog"
path = "src/bin/clear_catalog.rs"
required-features = ["dev-tools"]

[[bin]]
name = "clear_db"
path = "src/bin/clear_db.rs"
required-features = ["dev-tools"]

[[bin]]
name = "clear_non_admin"
path = "src/bin/clear_non_admin.rs"
required-features = ["dev-tools"]

[[bin]]
name = "clear_products"
path = "src/bin/clear_products.rs"
required-features = ["dev-tools"]

[[bin]]
name = "debug_db"
path = "src/bin/debug_db.rs"
required-features = ["dev-tools"]

[[bin]]
name = "reset_passwords"
path = "src/bin/reset_passwords.rs"
required-features = ["dev-tools"]

[[bin]]
name = "seed_db"
path = "src/bin/seed_db.rs"
required-features = ["dev-tools"]

[[bin]]
name = "strict_cleanup"
path = "src/bin/strict_cleanup.rs"
required-features = ["dev-tools"]

[[bin]]
name = "test_smtp"
path = "src/bin/test_smtp.rs"
required-features = ["dev-tools"]

[[bin]]
name = "verify_admin"
path = "src/bin/verify_admin.rs"
required-features = ["dev-tools"]

[dependencies]
axum = { version = "0.8", features = ["macros", "multipart"] }
chrono = { version = "0.4", features = ["serde"] }
http = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.6", features = ["cors", "trace", "fs"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
uuid = { version = "1", features = ["v4", "serde"] }
argon2 = "0.5"
password-hash = "0.5"
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite", "macros", "chrono", "uuid"] }
dotenvy = "0.15"
futures = "0.3"
rand_core = { version = "0.6", features = ["getrandom"] }
image = { version = "0.25.10", features = ["webp"] }
lettre = { version = "0.11", default-features = false, features = ["tokio1-rustls-tls", "serde", "builder", "smtp-transport"] }
urlencoding = "2.1"
redis = { version = "0.29", features = ["tokio-comp", "json", "connection-manager"] }
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json", "multipart", "stream"] }
