[package]
name = "wa_excel_import"
version = "0.1.0"
edition = "2021"

[dependencies]
calamine = "0.26"
eframe = { version = "0.29" }
egui = "0.29"
rfd = "0.15"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
